--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,15 +23,22 @@ body, html {
   background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
   padding: 15px;
-  text-align: center;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
   position: sticky;
   top: 0;
   z-index: 100;
 }
+
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+
 
 .header-content nav a {
   margin: 0 15px;
@@ -45,6 +52,21 @@ body, html {
 .header-content nav a:hover {
   color: #fff;
 }
+
+
+.income-display h1, h2 {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+.income-display h1 img, h2 img {
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+}
+
+
 
 .header-content .income-display h1,
 .header-content .income-display h2 {
@@ -97,14 +119,14 @@ body, html {
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  border: 2px solid #ff6347;
+  border: 2px solid #114837;
   background-color: #ffffff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   transition: background-color 0.3s ease;
 }
 
 .step.filled {
-  background-color: #ff6347;
+  background: linear-gradient(145deg, #47ffc5, #5ecf89);
 }
 
 .congrats-text {
@@ -171,7 +193,7 @@ body, html {
 }
 
 .card {
-  background: linear-gradient(145deg, #ff6347, #ff4500);
+  background: linear-gradient(145deg, #47ffc5, #5ecf89);
   border-radius: 12px;
   padding: 15px;
   width: 220px;
@@ -179,6 +201,8 @@ body, html {
   text-align: center;
   color: white;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+
 }
 
 .card:hover {
@@ -200,12 +224,11 @@ body, html {
 .card button {
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: #32cd32;
-  color: white;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
   border: none;
   border-radius: 6px;
   cursor: pointer;
-  font-weight: bold;
   text-transform: uppercase;
   transition: background-color 0.3s ease;
 }
@@ -241,4 +264,10 @@ body, html {
     opacity: 0;
     transform: translate(-50%, -50%) translateY(-50px);
   }
+}
+
+nav img {
+  height: 50px;
+  width: 50px;
+  color: white;
 }
